kubernetes/templates/kube_up_template.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: ${NAMESPACE}
  labels:
    name: ${NAMESPACE}
---
# Deployment (Backend)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: fleact
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: fleact
        tier: backend
        track: stable
    spec:
      containers:
        - name: backend
          image: "039706656811.dkr.ecr.us-east-2.amazonaws.com/fleact_backend:latest"
          ports:
            - name: http
              containerPort: 5000
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
# Service (Backend)
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ${NAMESPACE}
  labels:
    app: fleact
spec:
  selector:
    app: fleact
    tier: backend
  ports:
  - protocol: TCP
    port: 5000
    targetPort: http
---
# Deployment (Frontend)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: ${NAMESPACE}
spec:
  selector:
    matchLabels:
      app: fleact
      tier: frontend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: fleact
        tier: frontend
        track: stable
    spec:
      containers:
      - name: frontend
        image: "039706656811.dkr.ecr.us-east-2.amazonaws.com/fleact_frontend:latest"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
---
# Service (Frontend)
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: ${NAMESPACE}
spec:
  selector:
    app: fleact
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
# Nginx Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ${NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls:
  - hosts:
    - fleact.xyz
    secretName: tls-secret
  rules:
  - host: fleact.xyz
    http:
      paths:
        - path: /
          backend:
            serviceName: frontend
            servicePort: 80
        - path: /api
          backend:
            serviceName: backend
            servicePort: 5000
